--- a/templates/header.html.twig
+++ b/templates/header.html.twig
@@ -1,5 +1,10 @@
 {% block footer %}
-<a href="/"><img src="{{ asset('logo2.png') }}" id="logoHead"></a>
+<div id="logoHead">
+  <a href="#" class="d-block">
+    <img src="{{ asset('logo2.png') }}">
+  </a>
+</div>
+
 <nav class="navbar fixed-top" aria-label="Light offcanvas navbar">
     <div class="container-fluid g-0">
       <div class="square rounded menuButton">
