--- a/templates/main/home.html.twig
+++ b/templates/main/home.html.twig
@@ -4,20 +4,22 @@
 
 <section class="container d-flex" id="home">
     <div class="row">
-        <div class="col-lg-6 d-flex justify-content-center align-items-center" id="homeDescription" style="background-image: url('{{ asset("test.jpg") }}')">
-            <div class="d-flex flex-column justify-content-center align-items-center" style="height: 100%;">
-                <h1 class="display-4 fst-italic text-white">La Clunysoise c'est</h1>
-                <div class="text-center pt-5" id="compteur">
-                    <span class="countText fw-bold"><span class="count fw-bold">421 </span> Intervention ainsi que </span>
-                    <span class="countText fw-bold"><span class="count fw-bold">45 </span> Urgences par jour,</span>
-                    <span class="countText fw-bold"><span class="count fw-bold">28 </span> Salarié </span>
-                    <span class="countText fw-bold"><span class="count fw-bold">5 </span> Ambulances </span>
-                    <span class="countText fw-bold"><span class="count fw-bold">10 </span> VSL </span>
-                    <span class="countText fw-bold"><span class="count fw-bold">8 </span> Taxi</span>
+        <div class="col-lg-6 d-flex justify-content-center align-items-center" id="homeDescription">
+            <div>
+                <div id="titleDesc" class="d-flex flex-column justify-content-center align-items-center">
+                    <h1 class="display-4 fst-italic">La Clunysoise</h1>
+                    <p class="lead text-center ps-3 pe-3">L'entreprise « La Clunysoise » est une société d'ambulances privée située à Cluny. Avec à disposition des ambulances, des VSL, mais aussi des taxis.La Clunysoise apporte une réponse efficace et dynamique à toute demande de transports médicalisés ou non tout en participant activement aux besoins permanents d'interventions d'urgences et transferts inter hospitaliers effectués en collaboration avec le Samu et le centre d'appel 15.</p>
                 </div>
-                <p class="lead text-white text-center ps-3 pe-3">L'entreprise « La Clunysoise » est une société d'ambulances privée située à Cluny. Avec à disposition des ambulances, des VSL, mais aussi des taxis.La Clunysoise apporte une réponse efficace et dynamique à toute demande de transports médicalisés ou non tout en participant activement aux besoins permanents d'interventions d'urgences et transferts inter hospitaliers effectués en collaboration avec le Samu et le centre d'appel 15.</p>
+                <div class="d-flex row" id="buttonsContainer">
+                        <button type="button" class="btn bg-primary d-flex align-items-center justify-content-center text-decoration-none"><a class="text-white text-decoration-none" href="/contact">Contactez Nous</a></button>
+                        <button type="button" class="btn bg-primary d-flex align-items-center justify-content-center text-decoration-none"><a class="text-white text-decoration-none" href="/vos-rendez-vous">Prenez Rendez-Vous</a></button>
+                        <button type="button" class="btn bg-primary d-flex align-items-center justify-content-center text-decoration-none"><a class="text-white text-decoration-none" href="/nous-rejoindre">Rejoignez Nous</a></button>
+                    </div>
+                </div>
             </div>
         </div>
+
+        
         <div class="col-lg-6">
             <div id="carouselExampleAutoplaying" class="carousel slide" data-bs-ride="carousel">
                 <div id="carousel" class="carousel-inner text-center">
@@ -35,9 +37,9 @@
                     <div class="carousel-item">
                         <a href="/a-propos">
                             <div class="d-flex justify-content-center align-items-center d-block w-100">
-                                <img src="#" class="d-block w-100 center-block" alt="..." style="filter: grayscale(.5)"> 
+                                <img src="{{ asset('car2.jpg') }}" class="d-block w-100 center-block" alt="..." style="filter: grayscale(.5)"> 
                             </div>
-                            <div class="carousel-caption d-none d-md-block text-dark">
+                            <div class="carousel-caption d-none d-md-block">
                                 <h2> VSL </h2>
                                 <p>Nos vehicules sanitaires légers</p>
                             </div>
@@ -46,9 +48,9 @@
                     <div class="carousel-item">
                         <a href="/a-propos">
                             <div class="d-flex justify-content-center align-items-center d-block w-100">
-                                <img src="#" class="d-block w-100 center-block" alt="..." style="filter: grayscale(.5)">
+                                <img src="{{ asset('car3.jpg') }}" class="d-block w-100 center-block" alt="..." style="filter: grayscale(.5)">
                             </div>
-                            <div class="carousel-caption d-none d-md-block text-dark">
+                            <div class="carousel-caption d-none d-md-block">
                                 <h2> Taxi </h2>
                                 <p>Nos taxis</p>
                             </div>
@@ -63,6 +65,30 @@
                     <span class="carousel-control-next-icon" aria-hidden="true"></span>
                     <span class="visually-hidden">Next</span>
                 </button>
+            </div>
+
+
+            <div id="carouselExampleControls" class="carousel slide" data-mdb-ride="carousel"  data-bs-ride="carousel">
+                <div class="carousel-inner text-center pt-5">
+                    <div class="carousel-item active">
+                        <span class="countText fw-bold d-block"><span class="count fw-bold">421 </span> Intervention ainsi que </span>
+                    </div>
+                    <div class="carousel-item">
+                        <span class="countText fw-bold d-block"><span class="count fw-bold">45 </span> Urgences par jour,</span>
+                    </div>
+                    <div class="carousel-item">
+                        <span class="countText fw-bold d-block"><span class="count fw-bold">28 </span> Salarié </span>
+                    </div>
+                    <div class="carousel-item">
+                        <span class="countText fw-bold d-block"><span class="count fw-bold">5 </span> Ambulances </span>
+                    </div>
+                    <div class="carousel-item">
+                        <span class="countText fw-bold d-block"><span class="count fw-bold">10 </span> VSL </span>
+                    </div>
+                    <div class="carousel-item">
+                        <span class="countText fw-bold d-block"><span class="count fw-bold">8 </span> Taxi</span>
+                    </div>
+                </div>
             </div>
         </div>
     </div>
@@ -102,15 +128,6 @@
                 {% endif %}
             {% endfor %}
         </div>
-    </div>
-    
-    <div class="container">
-        <div class="row flex-row flex-wrap justify-content-center" id="buttons">
-            <button type="button" class="btn bg-primary d-flex align-items-center justify-content-center text-decoration-none"><a class="text-white text-decoration-none" href="/contact">Contactez Nous</a></button>
-            <button type="button" class="btn bg-primary d-flex align-items-center justify-content-center text-decoration-none"><a class="text-white text-decoration-none" href="/vos-rendez-vous">Prenez Rendez-Vous</a></button>
-            <button type="button" class="btn bg-primary d-flex align-items-center justify-content-center text-decoration-none"><a class="text-white text-decoration-none" href="/nous-rejoindre">Rejoignez Nous</a></button>
-        </div>
-
     </div>
 </section>
 <h2 class="pb-3 pt-3 text-center">Où nous trouver</h2>
