--- a/assets/styles/_home.scss
+++ b/assets/styles/_home.scss
@@ -15,14 +15,29 @@
     margin-top: 150px!important;
 }
 
-.countText {
-    color: black!important;
-    padding: 0 5px;
+#textCarousel {
+    position: absolute;
+    z-index: 1000;
+    top: 50%;
+    transform: translateY(-55%)
+}
+
+#faArrow {
+    position: absolute;
+    z-index: 1000;
+    top: 94%;
+    left: 50%;
+    transform: translateX(-52%)
+}
+
+#faArrow, #faArrow i  {
+    width: auto!important;
+    height: auto!important;
 }
 
 .count {
     color: #950D05;
-    font-size: 1.5rem;
+    font-size: 2rem;
 }
 
 .boxOne, .boxTwo {
@@ -61,17 +76,13 @@
     height: 85vh!important
 }
 
-#compteur {
-    height: 15vh!important;
-}
-
 #buttonsContainer button:hover, 
 #buttonsContainer button:focus {
     background-color: #5C84B7!important;
 }
 
 .btn {
-    --bs-btn-border-radius: 0!important;
+    --bs-btn-border-radius: 10px 10px 10px 10px!important;
     --bs-btn-border-color: white!important;
 }
 
@@ -81,6 +92,7 @@
     overflow: hidden;
     background-size: cover;
     background-position: center center;
+    position: relative;
 }
 
 .boxTwo {
@@ -89,6 +101,21 @@
     overflow: hidden;
     background-size: cover;
     background-position: center center;
+    position: relative;
+}
+
+.boxOne svg{
+    position: absolute; 
+    top: 100%; 
+    transform: translateY(-125%); 
+    left: 90%;
+}
+
+.boxTwo svg{
+    position: absolute; 
+    top: 100%; 
+    transform: translateY(-125%); 
+    left: 78%;
 }
 
 .carousel-control-next-icon {
@@ -99,16 +126,9 @@
     background-image: url("data:image/svg+xml,%3csvg xmlns=%27http://www.w3.org/2000/svg%27 viewBox=%270 0 16 16%27 fill=%27%23ffffff%27%3e%3cpath d=%27M11.354 1.646a.5.5 0 0 1 0 .708L5.707 8l5.647 5.646a.5.5 0 0 1-.708.708l-6-6a.5.5 0 0 1 0-.708l6-6a.5.5 0 0 1 .708 0z%27/%3e%3c/svg%3e");
 }
 
-.carousel-control-prev-icon, .carousel-control-next-icon {
-    display: inline-block;
-    width: 2.9rem;
-    height: 2.9rem;
-    border-radius: 50%;
-    background-repeat: no-repeat;
-    background-position: center;
-    background-size: 95% 95%;
-    background-color: #0059C6;
-  }
+#carouselExampleControls {
+    height: 15vh!important;
+}
 
 #gridGallery {
     background-size: cover;
@@ -143,7 +163,7 @@
 
 .container, .container-fluid, .container-xxl, .container-xl, .container-lg, .container-md, .container-sm {
     --bs-gutter-x: 0rem;
-  }
+}
 
 @media (max-width: 1199.98px) { 
     #homeDescription {
@@ -165,5 +185,16 @@
         height: 400px!important;
     }
 
+    .boxTwo svg, .boxOne svg{
+        left: 85%;
+    }
 
+    #faArrow {
+        top: 80%;
+    }
+
+    .btn {
+        --bs-btn-border-radius: 10px 10px 0 0!important;
+        --bs-btn-border-color: white!important;
+    }
  }
