--- a/templates/footer.html.twig
+++ b/templates/footer.html.twig
@@ -1,13 +1,12 @@
 {% block footer %}
 
 <div class="container" id="footerAll">
-    
     <footer class="row py-5 my-5 border-top justify-content-center" id="footer">
 
         <div class="col-lg-4 mb-3 pCol">
             <img class="pb-3" id="logo" src="{{ asset('footerLogo.png') }}">
             <br>
-            <p class="nav-item mb-2"><a href="geo:0,0?q=7+Avn.Pierre+le+Vénérable,71250+Cluny" class="nav-link p-0 text-body-secondary">7 Avn.Pierre le Vénérable, 71250 Cluny</a></p><br>
+            <p class="nav-item mb-2"><a target="_blank" href="geo:46.437944,4.654481?q=7+Avn.Pierre+le+Vénérable,71250+Cluny" class="nav-link p-0 text-body-secondary">7 Avn.Pierre le Vénérable, 71250 Cluny</a></p><br>
             <p class="text-body-secondary">&copy; 2023</p>
         </div>
 
