--- a/templates/main/appointment.html.twig
+++ b/templates/main/appointment.html.twig
@@ -6,12 +6,47 @@
 <h1 class="text-center"> Vos Rendez - vous </h1>
 
 <div class="container">
-    <section class="row border-top">
+    <section class="row">
 
         <div class="col-10 offset-1">
 
         {{ form_start(formulaire) }}
-            {{ form_widget(formulaire) }}
+
+        <div class="border-top mt-5">
+            <div class="row">
+                <div class="col-2">{{ form_row(formulaire.Civilite) }}</div>
+                <div class="col-5">{{ form_row(formulaire.Nom) }}</div>
+                <div class="col-5">{{ form_row(formulaire.Prenom) }}</div>
+            </div>
+
+            <div class="row">    
+            <div class="col-6">{{ form_row(formulaire.Telephone) }}</div>
+            <div class="col-6">{{ form_row(formulaire.email) }}</div>
+            </div>
+
+            <div class="row">
+                <div class="col-5">{{ form_row(formulaire.Rue) }}</div>
+                <div class="col-5">{{ form_row(formulaire.Ville) }}</div>
+                <div class="col-2">{{ form_row(formulaire.Postcode) }}</div>
+            </div>
+        </div>
+
+        <div class="border-top mt-5">
+            {{ form_row(formulaire.DateRendezVous) }}
+            {{ form_row(formulaire.HeureRendezVous) }}
+            {{ form_row(formulaire.DureeEstimee) }}
+
+            {{ form_row(formulaire.LieuxRendezVous) }}
+            {{ form_row(formulaire.Prescripteur) }}
+            {{ form_row(formulaire.Motif) }}
+            {{ form_row(formulaire.TypeEtablissement) }}
+            {{ form_row(formulaire.ModeTransport) }}
+            {{ form_row(formulaire.Aller) }}
+            {{ form_row(formulaire.content) }}
+        </div>
+
+        {{ form_row(formulaire.envoyer) }}
+
         {{ form_end(formulaire) }}
 
         {% for flashMessage in app.flashes('success') %}
