--- a/templates/main/home.html.twig
+++ b/templates/main/home.html.twig
@@ -10,7 +10,7 @@
             <div>
                 <div id="titleDesc" class="d-flex flex-column justify-content-center align-items-center">
                     <h1 class="display-4 fst-italic">La Clunysoise</h1>
-                    <p class="lead text-center ps-3 pe-3">L'entreprise « La Clunysoise » est une société d'ambulances privée située à Cluny. Avec à disposition des ambulances, des VSL, mais aussi des taxis.La Clunysoise apporte une réponse efficace et dynamique à toute demande de transports médicalisés ou non tout en participant activement aux besoins permanents d'interventions d'urgences et transferts inter hospitaliers effectués en collaboration avec le Samu et le centre d'appel 15.</p>
+                    <p class="text-center ps-3 pe-3">L'entreprise « La Clunysoise » est une société d'ambulances privée située à Cluny. Avec à disposition des ambulances, des VSL, mais aussi des taxis.La Clunysoise apporte une réponse efficace et dynamique à toute demande de transports médicalisés ou non tout en participant activement aux besoins permanents d'interventions d'urgences et transferts inter hospitaliers effectués en collaboration avec le Samu et le centre d'appel 15.</p>
                 </div>
                 <div class="d-flex row" id="buttonsContainer">
                         <button type="button" class="btn bg-primary text-decoration-none"><a class="text-white text-decoration-none d-flex align-items-center justify-content-center" href="/contact">Contactez Nous</a></button>
