--- a/templates/main/home.html.twig
+++ b/templates/main/home.html.twig
@@ -1,19 +1,21 @@
 {% extends 'base.html.twig' %}
 
 {% block body %}
-
+<div id="faArrow" class="text-center">
+    <i class="fa-solid fa-circle-arrow-down fa-bounce" style="color: #000000 #ffffff; font-size: 2.5rem;"></i>
+</div>
 <section class="container d-flex" id="home">
     <div class="row">
         <div class="col-lg-6 d-flex justify-content-center align-items-center" id="homeDescription">
             <div>
                 <div id="titleDesc" class="d-flex flex-column justify-content-center align-items-center">
                     <h1 class="display-4 fst-italic">La Clunysoise</h1>
-                    <p class="lead text-center ps-3 pe-3">L'entreprise « La Clunysoise » est une société d'ambulances privée située à Cluny. Avec à disposition des ambulances, des VSL, mais aussi des taxis.La Clunysoise apporte une réponse efficace et dynamique à toute demande de transports médicalisés ou non tout en participant activement aux besoins permanents d'interventions d'urgences et transferts inter hospitaliers effectués en collaboration avec le Samu et le centre d'appel 15.</p>
+                    <p class="text-center ps-3 pe-3">L'entreprise « La Clunysoise » est une société d'ambulances privée située à Cluny. Avec à disposition des ambulances, des VSL, mais aussi des taxis.La Clunysoise apporte une réponse efficace et dynamique à toute demande de transports médicalisés ou non tout en participant activement aux besoins permanents d'interventions d'urgences et transferts inter hospitaliers effectués en collaboration avec le Samu et le centre d'appel 15.</p>
                 </div>
                 <div class="d-flex row" id="buttonsContainer">
-                        <button type="button" class="btn bg-primary d-flex align-items-center justify-content-center text-decoration-none"><a class="text-white text-decoration-none" href="/contact">Contactez Nous</a></button>
-                        <button type="button" class="btn bg-primary d-flex align-items-center justify-content-center text-decoration-none"><a class="text-white text-decoration-none" href="/vos-rendez-vous">Prenez Rendez-Vous</a></button>
-                        <button type="button" class="btn bg-primary d-flex align-items-center justify-content-center text-decoration-none"><a class="text-white text-decoration-none" href="/nous-rejoindre">Rejoignez Nous</a></button>
+                        <button type="button" class="btn bg-primary text-decoration-none"><a class="text-white text-decoration-none d-flex align-items-center justify-content-center" href="/contact">Contactez Nous</a></button>
+                        <button type="button" class="btn bg-primary d-flex align-items-center justify-content-center text-decoration-none"><a class="text-white text-decoration-none d-flex align-items-center justify-content-center" href="/vos-rendez-vous">Prenez Rendez-Vous</a></button>
+                        <button type="button" class="btn bg-primary d-flex align-items-center justify-content-center text-decoration-none"><a class="text-white text-decoration-none d-flex align-items-center justify-content-center" href="/nous-rejoindre">Rejoignez Nous</a></button>
                     </div>
                 </div>
             </div>
@@ -21,77 +23,63 @@
 
         
         <div class="col-lg-6">
-            <div id="carouselExampleAutoplaying" class="carousel slide" data-bs-ride="carousel">
+            <div id="carouselExampleAutoplaying" class="carousel slide" data-bs-ride="carousel" data-bs-pause="false">
                 <div id="carousel" class="carousel-inner text-center">
-                    <div class="carousel-item active">
-                        <a href="/a-propos">
+                    <div class="carousel-item active" data-bs-interval="3900">
                             <div class="d-flex justify-content-center align-items-center d-block w-100">
                                 <img src="{{ asset('car1.jpg') }}" class="d-block w-100 center-block" alt="..." style="filter: grayscale(.5)">
                             </div>
-                            <div class="carousel-caption d-none d-md-block">
-                                <h2>Ambulance</h2>
-                                <p>Nos ambulances</p>
-                            </div>
-                        </a>
                     </div>
-                    <div class="carousel-item">
-                        <a href="/a-propos">
+                    <div class="carousel-item" data-bs-interval="3900">
                             <div class="d-flex justify-content-center align-items-center d-block w-100">
                                 <img src="{{ asset('car2.jpg') }}" class="d-block w-100 center-block" alt="..." style="filter: grayscale(.5)"> 
                             </div>
-                            <div class="carousel-caption d-none d-md-block">
-                                <h2> VSL </h2>
-                                <p>Nos vehicules sanitaires légers</p>
-                            </div>
-                        </a>
                     </div>
-                    <div class="carousel-item">
-                        <a href="/a-propos">
+                    <div class="carousel-item" data-bs-interval="3900">
                             <div class="d-flex justify-content-center align-items-center d-block w-100">
                                 <img src="{{ asset('car3.jpg') }}" class="d-block w-100 center-block" alt="..." style="filter: grayscale(.5)">
                             </div>
-                            <div class="carousel-caption d-none d-md-block">
-                                <h2> Taxi </h2>
-                                <p>Nos taxis</p>
-                            </div>
-                        </a>
-                    </div>
-                </div>
-                <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleAutoplaying" data-bs-slide="prev">
-                    <span class="carousel-control-prev-icon" aria-hidden="true"></span>
-                    <span class="visually-hidden">Previous</span>
-                </button>
-                <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleAutoplaying" data-bs-slide="next">
-                    <span class="carousel-control-next-icon" aria-hidden="true"></span>
-                    <span class="visually-hidden">Next</span>
-                </button>
-            </div>
-
-
-            <div id="carouselExampleControls" class="carousel slide" data-mdb-ride="carousel"  data-bs-ride="carousel">
-                <div class="carousel-inner text-center pt-5">
-                    <div class="carousel-item active">
-                        <span class="countText fw-bold d-block"><span class="count fw-bold">421 </span> Intervention ainsi que </span>
-                    </div>
-                    <div class="carousel-item">
-                        <span class="countText fw-bold d-block"><span class="count fw-bold">45 </span> Urgences par jour,</span>
-                    </div>
-                    <div class="carousel-item">
-                        <span class="countText fw-bold d-block"><span class="count fw-bold">28 </span> Salarié </span>
-                    </div>
-                    <div class="carousel-item">
-                        <span class="countText fw-bold d-block"><span class="count fw-bold">5 </span> Ambulances </span>
-                    </div>
-                    <div class="carousel-item">
-                        <span class="countText fw-bold d-block"><span class="count fw-bold">10 </span> VSL </span>
-                    </div>
-                    <div class="carousel-item">
-                        <span class="countText fw-bold d-block"><span class="count fw-bold">8 </span> Taxi</span>
                     </div>
                 </div>
             </div>
-        </div>
-    </div>
+
+            <a href="/notre-identite">
+                <div id="carouselExampleControls" class="carousel slide" data-mdb-ride="carousel"  data-bs-ride="carousel" data-bs-pause="false">
+                    <div class="carousel-inner text-center" id="textCarousel">
+                        <div class="carousel-item active" data-bs-interval="2500">
+                            
+                                <span class="countText fw-bold d-block text-black"><span class="count fw-bold">421 </span><br> Interventions</span>
+                            
+                        </div>
+                        <div class="carousel-item" data-bs-interval="2500">
+                            
+                                <span class="countText fw-bold d-block text-black"><span class="count fw-bold">45 </span><br> Urgences par jour</span>
+                            
+                        </div>
+                        <div class="carousel-item" data-bs-interval="2500">
+                            
+                                <span class="countText fw-bold d-block text-black"><span class="count fw-bold">28 </span><br> Salarié</span>
+                            
+                        </div>
+                        <div class="carousel-item" data-bs-interval="2500">
+                            
+                                <span class="countText fw-bold d-block text-black"><span class="count fw-bold">5 </span><br> Ambulances</span>
+                            
+                        </div>
+                        <div class="carousel-item" data-bs-interval="3250">
+                            
+                                <span class="countText fw-bold d-block text-black"><span class="count fw-bold">10 </span><br> VSL</span>
+                            
+                        </div>
+                        <div class="carousel-item" data-bs-interval="2500">
+                            
+                                <span class="countText fw-bold d-block text-black"><span class="count fw-bold">8 </span><br> Taxi</span>
+                            
+                        </div>
+                    </div>
+                </div>
+            </a>
+        </div>           
 </section>
 
 <section id="gridGallery" style="background-image: url('{{ asset("background.png") }}');">
@@ -104,8 +92,14 @@
                 {% if loop.index is odd %}
                     {% if switchBox %}
                         <a href="{{ path('app_posts_show', {'slug': posts.slug}) }}" class="box-image d-flex align-items-center justify-content-center text-decoration-none boxTwo" style="background-image:linear-gradient(rgba(58, 58 ,58 ,0.3), rgba(58, 58 ,58 , 0.6)), url('upload/images/{{ asset(posts.mediaUrl) }}')">
+                            <svg xmlns="http://www.w3.org/2000/svg" width="50" height="50" fill="white" class="bi bi-arrow-right-circle-fill" viewBox="0 0 16 16">
+                                <path d="M8 0a8 8 0 1 1 0 16A8 8 0 0 1 8 0zM4.5 7.5a.5.5 0 0 0 0 1h5.793l-2.147 2.146a.5.5 0 0 0 .708.708l3-3a.5.5 0 0 0 0-.708l-3-3a.5.5 0 1 0-.708.708L10.293 7.5H4.5z"/>
+                              </svg>
                     {% else %}
                         <a href="{{ path('app_posts_show', {'slug': posts.slug}) }}" class="box-image d-flex align-items-center justify-content-center text-decoration-none boxOne" style="background-image:linear-gradient(rgba(58, 58 ,58 ,0.3), rgba(58, 58 ,58 , 0.6)), url('upload/images/{{ asset(posts.mediaUrl) }}')">
+                            <svg xmlns="http://www.w3.org/2000/svg" width="50" height="50" fill="white" class="bi bi-arrow-right-circle-fill" viewBox="0 0 16 16">
+                                <path d="M8 0a8 8 0 1 1 0 16A8 8 0 0 1 8 0zM4.5 7.5a.5.5 0 0 0 0 1h5.793l-2.147 2.146a.5.5 0 0 0 .708.708l3-3a.5.5 0 0 0 0-.708l-3-3a.5.5 0 1 0-.708.708L10.293 7.5H4.5z"/>
+                              </svg>
                     {% endif %}
                         <div>
                             <p class="text-white">{{ posts.description | striptags | slice(0, 310)}}</p>
@@ -114,11 +108,17 @@
                 {% else %}
                     {% if switchBox %}
                         <a href="{{ path('app_posts_show', {'slug': posts.slug}) }}" class="box-image d-flex align-items-center justify-content-center text-decoration-none boxOne" style="background-image:linear-gradient(rgba(58, 58 ,58 ,0.3), rgba(58, 58 ,58 , 0.6)), url('upload/images/{{ asset(posts.mediaUrl) }}')">
+                            <svg xmlns="http://www.w3.org/2000/svg" width="50" height="50" fill="white" class="bi bi-arrow-right-circle-fill" viewBox="0 0 16 16">
+                                <path d="M8 0a8 8 0 1 1 0 16A8 8 0 0 1 8 0zM4.5 7.5a.5.5 0 0 0 0 1h5.793l-2.147 2.146a.5.5 0 0 0 .708.708l3-3a.5.5 0 0 0 0-.708l-3-3a.5.5 0 1 0-.708.708L10.293 7.5H4.5z"/>
+                              </svg>
                     {% else %}
                         <a href="{{ path('app_posts_show', {'slug': posts.slug}) }}" class="box-image d-flex align-items-center justify-content-center text-decoration-none boxTwo" style="background-image:linear-gradient(rgba(58, 58 ,58 ,0.3), rgba(58, 58 ,58 , 0.6)), url('upload/images/{{ asset(posts.mediaUrl) }}')">
+                          <svg xmlns="http://www.w3.org/2000/svg" width="50" height="50" fill="white" class="bi bi-arrow-right-circle-fill" viewBox="0 0 16 16">
+                                <path d="M8 0a8 8 0 1 1 0 16A8 8 0 0 1 8 0zM4.5 7.5a.5.5 0 0 0 0 1h5.793l-2.147 2.146a.5.5 0 0 0 .708.708l3-3a.5.5 0 0 0 0-.708l-3-3a.5.5 0 1 0-.708.708L10.293 7.5H4.5z"/>
+                              </svg>
                     {% endif %}
                         <div>
-                            <p class="text-white">{{ posts.description | striptags | slice(0, 310)}}</p>
+                            <p class="text-white text-center">{{ posts.description | striptags | slice(0, 310)}}</p>
                         </div>
                     </a>
                 {% endif %}
@@ -131,5 +131,10 @@
     </div>
 </section>
 <h2 class="pb-3 pt-3 text-center">Où nous trouver</h2>
+<div class="row text-center">
+    <iframe id="desktopIframe" src="https://www.google.com/maps/embed?pb=!1m14!1m8!1m3!1d10998.152493979294!2d4.6545993!3d46.4380336!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x47f30aeb8182f371%3A0xbf3199329fef4a95!2sLA%20CLUNYSOISE%20AMBULANCES%20ET%20TAXIS!5e0!3m2!1sfr!2sfr!4v1689589206519!5m2!1sfr!2sfr" width="600" height="450" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
+    
+    <iframe id="mobileIframe" src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2749.5379384110347!2d4.652024377356847!3d46.438037267937126!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x47f30aeb8182f371%3A0xbf3199329fef4a95!2sLA%20CLUNYSOISE%20AMBULANCES%20ET%20TAXIS!5e0!3m2!1sfr!2sfr!4v1690210543131!5m2!1sfr!2sfr" width="600" height="1000" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
+</div>
 
 {% endblock %}
