--- a/assets/app.scss
+++ b/assets/app.scss
@@ -1,5 +1,4 @@
 @import "~bootstrap/scss/bootstrap";
-@import "assets/styles/_theme.scss";
 @import "assets/styles/_login.scss";
 @import "assets/styles/_home.scss";
 @import "assets/styles/_header.scss";
@@ -19,4 +18,11 @@
     box-sizing: border-box;
     line-height: 1.8em;
     font-family: 'Poppins', sans-serif;
+    font-size: 1.2rem;
+}
+
+@media (max-width: 1200px) {
+    * {
+        font-size: 1.6rem;
+    }
 }
