--- a/assets/styles/_home.scss
+++ b/assets/styles/_home.scss
@@ -173,6 +173,26 @@
     --bs-gutter-x: 0rem;
 }
 
+// -------------------- Grid Aniation --------------------
+.animate-text
+{
+  opacity:0;
+  transition: all 0.6s ease-in-out;
+}
+
+.tile p
+{
+  line-height: 25px;
+  transform: translateX(-200px);
+  transition-delay: 0.2s;
+}
+
+.tile:hover .animate-text
+{
+  transform:translateX(0);
+  opacity:1;
+}
+
 #mobileIframe {
     display: none;
 }
