--- a/templates/main/appointment.html.twig
+++ b/templates/main/appointment.html.twig
@@ -8,7 +8,7 @@
 <div class="container">
     <section class="row">
 
-        <div class="col-10 offset-1">
+        <div class="col-12">
             {{ form_start(formulaire) }}
 
             <div class="identity">
