--- a/templates/main/about.html.twig
+++ b/templates/main/about.html.twig
@@ -1,48 +1,37 @@
 {% extends 'base.html.twig' %}
-
-
 {% block body %}
-<h1 class="text-center">Ambulance La Clunysoise</h1>
-
 {% set counter = 0 %}
-
 {% for posts in post %}
-
     {% if counter is divisible by(2) %}
-
-    <section id="showSection" style="background-image: url('{{ asset('background.png') }}');">
+    <section class="showSection" style="background-image: url('{{ asset('background.png') }}');">
         <div class="container-fluid pt-5 pb-5">
-            <div class="row" id="content">
-                <div class="col-lg-12" id="subContent">
+            <div class="row content">
+                <div class="col-lg-12 subContent">
                     <h1 class="fw-bolder pb-5 text-center">{{ posts.title }}</h1> 
                     {% if posts.mediaUrl is not null %}
-                    <img class="img-fluid rounded" src="upload/images/{{ asset(posts.mediaUrl) }}">
+                    <img class="img-fluid rounded-5 imgL" src="upload/images/{{ asset(posts.mediaUrl) }}">
+                    {% endif %}
+                    <p>{{ posts.content|striptags|replace({'&nbsp;': ''}) }}</p>
+                </div>
+            </div>
+        </div>
+        {% else %}
+        <div class="container-fluid pt-5 showSection">
+            <div class="row content">
+                <div class="col-lg-12 subContent">
+                    <h1 class="fw-bolder pb-5 text-center">{{ posts.title }}</h1> 
+                    {% if posts.mediaUrl is not null %}
+                    <img class="img-fluid rounded-5 imgR" src="upload/images/{{ asset(posts.mediaUrl) }}">
                     {% endif %}
                     <p>{{ posts.content|striptags|replace({'&nbsp;': ''}) }}</p>
                 </div>
             </div>
         </div>
     </section>
-
-        {% else %}
-
-        <section class="showSection" style="background-image: url('{{ asset('background.png') }}');">
-            <div class="container-fluid pt-5 pb-5 showSection">
-                <div class="row content">
-                    <div class="col-lg-12 subContent">
-                        <h1 class="fw-bolder pb-5 text-center">{{ posts.title }}</h1> 
-                        <p>{{ posts.content|striptags|replace({'&nbsp;': ''}) }}</p>
-                        {% if posts.mediaUrl is not null %}
-                        <img class="img-fluid rounded" src="upload/images/{{ asset(posts.mediaUrl) }}">
-                        {% endif %}
-                    </div>
-                </div>
-            </div>
-        </section>
-        
     {% endif %}
-    
     {% set counter = counter + 1 %}
 {% endfor %}
 
 {% endblock %}
+
+
