--- a/templates/main/home.html.twig
+++ b/templates/main/home.html.twig
@@ -83,7 +83,7 @@
 </section>
 
 <section id="gridGallery" style="background-image: url('{{ asset("background.png") }}');">
-    <h2 class="text-center pt-5 has-feedback wow fadeInLeft" data-wow-delay="0.6s">Actus</h2>
+    <h2 class="text-center pt-5">Actus</h2>
     <div class="container">
         <div class="row justify-content-center">
             {% set switchBox = false %}
