--- a/templates/main/contact.html.twig
+++ b/templates/main/contact.html.twig
@@ -11,25 +11,24 @@
             <h2></h2>
             <p class="text-body-secondary mt-4"><a href="tel:+33385590487" class="nav-link p-0 text-body-secondary">Tèl : 03 85 59 04 87</a></p>
             <p class="text-body-secondary mt-4"><a href="tel:+33677658774" class="nav-link p-0 text-body-secondary">Tèl : 06 77 65 87 74</a></p>
-            <p class="text-body-secondary mt-4"><a href="mailto:la.clunysoise@orange.fr" class="nav-link p-0 text-body-secondary">E-mail : la.clunysoise@orange.fr</a></p>
             <p class="nav-item mb-2 mt-4"><a href="geo:0,0?q=7+Avn.Pierre+le+Vénérable,71250+Cluny" class="nav-link p-0 text-body-secondary">7 Avn.Pierre le Vénérable, 71250 Cluny</a></p>
 
-            <iframe class="mt-5" src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2749.5379384110047!2d4.652024377010696!3d46.43803726793772!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x47f30aeb8182f371%3A0xbf3199329fef4a95!2sLA%20CLUNYSOISE%20AMBULANCES%20ET%20TAXIS!5e0!3m2!1sfr!2sfr!4v1689871120391!5m2!1sfr!2sfr" width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
+            <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2749.5379384110047!2d4.652024377010696!3d46.43803726793772!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x47f30aeb8182f371%3A0xbf3199329fef4a95!2sLA%20CLUNYSOISE%20AMBULANCES%20ET%20TAXIS!5e0!3m2!1sfr!2sfr!4v1689871120391!5m2!1sfr!2sfr" width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
         </div>
 
-        <div class="col-6">
+        <div class="col-6 contact form">
             {{ form_start(formulaire) }}
 
                 <div>
                     <div class="row">
                         <div class="col-2">{{ form_row(formulaire.Civilite) }}</div>
-                        <div class="col-5">{{ form_row(formulaire.Nom) }}</div>
-                        <div class="col-5">{{ form_row(formulaire.Prenom) }}</div>
+                        <div class="col-4 offset-1">{{ form_row(formulaire.Nom) }}</div>
+                        <div class="col-4 offset-1">{{ form_row(formulaire.Prenom) }}</div>
                     </div>
 
                     <div class="row">    
-                        <div class="col-6">{{ form_row(formulaire.Telephone) }}</div>
-                        <div class="col-6">{{ form_row(formulaire.email) }}</div>
+                        <div class="col-5">{{ form_row(formulaire.Telephone) }}</div>
+                        <div class="col-5 offset-2">{{ form_row(formulaire.email) }}</div>
                     </div>
 
                 </div>
