--- a/assets/styles/_home.scss
+++ b/assets/styles/_home.scss
@@ -250,3 +250,17 @@
         font-size: 2rem !important;
     }
  }
+
+
+#homeDescription {
+    width: 50vw!important;
+    height: 100vh!important;
+    opacity: 0;
+    transform: translateX(-200px);
+    transition: opacity 1s ease-in-out, transform 1s ease-in-out;
+}
+
+#homeDescription.fade-in-left {
+    opacity: 1;
+    transform: translateX(0);
+}
