--- a/templates/main/home.html.twig
+++ b/templates/main/home.html.twig
@@ -15,7 +15,7 @@
                     <p class="text-center ps-3 pe-3">L'entreprise « La Clunysoise » est une société d'ambulances privée située à Cluny. Avec à disposition des ambulances, des VSL, mais aussi des taxis.La Clunysoise apporte une réponse efficace et dynamique à toute demande de transports médicalisés ou non tout en participant activement aux besoins permanents d'interventions d'urgences et transferts inter hospitaliers effectués en collaboration avec le Samu et le centre d'appel 15.</p>
                 </div>
 
-                <div id="buttonsContainer" class="d-flex row fade-in-up">
+                <div id="buttonsContainer" class="d-flex row fade-in-left">
 
                         <button type="button" class="btn bg-primary text-decoration-none">
                             <a class="text-white text-decoration-none d-flex align-items-center justify-content-center" href="/contact">Contactez Nous</a>
@@ -56,7 +56,7 @@
             </div>
 
             <a href="/notre-identite">
-                <div id="carouselExampleControls" class="carousel slide" data-mdb-ride="carousel"  data-bs-ride="carousel" data-bs-pause="false">
+                <div id="carouselExampleControls" class="carousel slide fade-in-right" data-mdb-ride="carousel"  data-bs-ride="carousel" data-bs-pause="false">
                     <div class="carousel-inner text-center" id="textCarousel">
                         <div class="carousel-item active" data-bs-interval="2500">
                             
